fix(style): added white space on postCardContent class

--- a/client/src/features/posts/PostCard.module.css
+++ b/client/src/features/posts/PostCard.module.css
@@ -43,6 +43,7 @@
 .postContent {
   padding: 1rem 0;
   margin: 1rem 0;
+  white-space: pre-line;
 }
 
 .commentsContainer {
